[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/ChallengeGame.gd" type="Script" id=2]
[ext_resource path="res://Scripts/BricketGridChallenge.gd" type="Script" id=3]
[ext_resource path="res://Asset/OpenSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/Main/backbg.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Balls/antikor.png" type="Texture" id=6]
[ext_resource path="res://Asset/Montserrat-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://UI/LevelItem/coin48.png" type="Texture" id=8]
[ext_resource path="res://UI/Game/toplari-cek.png" type="Texture" id=9]
[ext_resource path="res://UI/Game/pause.png" type="Texture" id=10]
[ext_resource path="res://UI/Game/help.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Tutorial.tscn" type="PackedScene" id=12]
[ext_resource path="res://UI/Game/cizgi-ekle.png" type="Texture" id=16]
[ext_resource path="res://UI/Game/top-ekle.png" type="Texture" id=17]
[ext_resource path="res://UI/Game/toplarin-canini-yariya-dusur.png" type="Texture" id=18]
[ext_resource path="res://UI/Game/son-sirayi-yok-et.png" type="Texture" id=19]

[sub_resource type="DynamicFont" id=1]
size = 72
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 42
use_mipmaps = true
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="ChallengeGame" type="Node2D"]
script = ExtResource( 2 )

[node name="HUD" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="Control" parent="HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/BG"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="Control" parent="HUD"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD/Top"]
margin_right = 1080.0
margin_bottom = 170.0
size_flags_horizontal = 3
color = Color( 0.0627451, 0.0901961, 0.192157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/Top"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/margin_top = 36
custom_constants/margin_left = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Top/MarginContainer"]
margin_left = 16.0
margin_top = 36.0
margin_right = 248.0
margin_bottom = 144.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="HUD/Top/MarginContainer/HBoxContainer"]
margin_right = 108.0
margin_bottom = 108.0
size_flags_vertical = 4
texture_normal = ExtResource( 10 )
stretch_mode = 3

[node name="InfoButton" type="TextureButton" parent="HUD/Top/MarginContainer/HBoxContainer"]
margin_left = 124.0
margin_right = 232.0
margin_bottom = 108.0
size_flags_vertical = 6
texture_normal = ExtResource( 11 )
stretch_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="HUD/Top"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -270.5
margin_right = 270.5
margin_bottom = 124.0
custom_constants/margin_top = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="HUD/Top/MarginContainer2"]
margin_left = 213.0
margin_top = 36.0
margin_right = 327.0
margin_bottom = 125.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.952941, 0, 1 )
text = "551"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="HUD/Top"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -208.0
margin_bottom = 145.0
custom_constants/margin_right = 36
custom_constants/margin_top = 36
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Top/MarginContainer3"]
margin_left = 13.0
margin_top = 36.0
margin_right = 172.0
margin_bottom = 145.0
size_flags_horizontal = 10
custom_constants/separation = 16

[node name="CoinsLabel" type="Label" parent="HUD/Top/MarginContainer3/HBoxContainer"]
margin_top = 28.0
margin_right = 95.0
margin_bottom = 80.0
size_flags_horizontal = 11
custom_fonts/font = SubResource( 2 )
text = "1234"
align = 2

[node name="CoinsTexture" type="TextureRect" parent="HUD/Top/MarginContainer3/HBoxContainer"]
margin_left = 111.0
margin_right = 159.0
margin_bottom = 109.0
size_flags_horizontal = 10
texture = ExtResource( 8 )
stretch_mode = 4

[node name="Down" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_right = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="HUD/Down"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -420.0
margin_right = 540.0
rect_min_size = Vector2( 0, 420 )
color = Color( 0.0627451, 0.0901961, 0.192157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="HUD/Down"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -420.0
margin_right = 540.0
custom_constants/margin_top = 64
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="HUD/Down/MarginContainer2"]
margin_left = 429.0
margin_top = 64.0
margin_right = 651.0
margin_bottom = 388.0
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/Down"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -420.0
margin_right = 540.0
margin_bottom = -60.0
rect_min_size = Vector2( 0, 420 )
custom_constants/margin_top = 64
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Down/MarginContainer"]
margin_top = 64.0
margin_right = 1080.0
margin_bottom = 388.0
custom_constants/separation = 72
alignment = 1

[node name="TextureButton" type="TextureButton" parent="HUD/Down/MarginContainer/HBoxContainer"]
margin_left = 77.0
margin_right = 255.0
margin_bottom = 324.0
texture_normal = ExtResource( 18 )

[node name="Label" type="Label" parent="HUD/Down/MarginContainer/HBoxContainer/TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
custom_fonts/font = SubResource( 3 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="HUD/Down/MarginContainer/HBoxContainer"]
margin_left = 327.0
margin_right = 505.0
margin_bottom = 324.0
texture_normal = ExtResource( 19 )

[node name="TextureButton3" type="TextureButton" parent="HUD/Down/MarginContainer/HBoxContainer"]
margin_left = 577.0
margin_right = 754.0
margin_bottom = 324.0
texture_normal = ExtResource( 17 )

[node name="TextureButton4" type="TextureButton" parent="HUD/Down/MarginContainer/HBoxContainer"]
margin_left = 826.0
margin_right = 1003.0
margin_bottom = 324.0
texture_normal = ExtResource( 16 )

[node name="Wall" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="RightWall" type="StaticBody2D" parent="Wall"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall/RightWall"]
polygon = PoolVector2Array( 1080, 164, 1080, 1680, 1096, 1680, 1096, 164 )

[node name="LeftWall" type="StaticBody2D" parent="Wall"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall/LeftWall"]
polygon = PoolVector2Array( 0, 164, 0, 1680, -16, 1680, -16, 164 )

[node name="Ceil" type="StaticBody2D" parent="Wall"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall/Ceil"]
polygon = PoolVector2Array( 0, 180, 0, 164, 1080, 164, 1080, 180 )

[node name="Ground" type="StaticBody2D" parent="Wall"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wall/Ground"]
polygon = PoolVector2Array( 0, 1500, 0, 1508, 1080, 1508, 1080, 1500 )

[node name="BricketGrid" type="Node2D" parent="."]
position = Vector2( 0, 180 )
script = ExtResource( 3 )

[node name="Tutorial" parent="." instance=ExtResource( 12 )]
position = Vector2( 0, 180 )

[node name="NewSpawn" type="Position2D" parent="."]
visible = false
position = Vector2( 540, 1498 )
__meta__ = {
"_edit_lock_": true
}

[node name="Ball" type="Sprite" parent="NewSpawn"]
texture = ExtResource( 6 )

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( 540, 1498 )
__meta__ = {
"_edit_lock_": true
}

[node name="FirstLine" type="Line2D" parent="Spawn"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.823529, 0.823529, 0.823529, 1 )
antialiased = true

[node name="EndLine" type="Line2D" parent="Spawn"]
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0
default_color = Color( 0.823529, 0.823529, 0.823529, 1 )
antialiased = true

[node name="FirstRay" type="RayCast2D" parent="Spawn"]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="EndRay" type="RayCast2D" parent="Spawn"]
enabled = true
cast_to = Vector2( 0, 0 )

[node name="BallCount" type="Label" parent="Spawn"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -26.0
margin_top = -63.0
margin_right = 27.0
margin_bottom = -18.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball" type="Sprite" parent="Spawn"]
texture = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Tween" type="Tween" parent="."]
[connection signal="tree_exited" from="." to="." method="_on_ChallengeGame_tree_exited"]
